--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -59,7 +59,7 @@
         <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
           <h6 class="text-uppercase mb-4 font-weight-bold">Contact</h6>
           <p>
-            <i class="fas fa-home mr-3"></i>Pachora, Jalgaon , Maharashtra</p>
+            <i class="fas fa-home mr-3"></i>PACHORA , JALGAON , MAHARASHTRA</p>
           <p>
             <i class="fas fa-envelope mr-3"></i> jpurvansh23@gmail.com</p>
           <p>
@@ -71,7 +71,7 @@
         <div class="col-md-7 col-lg-8">
           <p class="text-center text-md-left">© 2020 Copyright:
             <a>
-              <strong>Purvansh</strong>
+              <strong>PURVANSH</strong>
             </a>
           </p>
         </div>
