--- a/src/app/getstarted/getstarted/getstarted.component.html
+++ b/src/app/getstarted/getstarted/getstarted.component.html
@@ -105,8 +105,8 @@
 
         <!-- Grid column -->
         <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
-          <h6 class="text-uppercase mb-4 font-weight-bold">Purvansh Jain</h6>
-          <p> Training ( Angular Bootcamp ) </p>
+          <h6 class="text-uppercase mb-4 font-weight-bold">ANGULAr</h6>
+          <p>A free training bootcamp for social cause </p>
         </div>
         <!-- Grid column -->
 
@@ -122,7 +122,7 @@
         <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
           
           <p>
-            <i class="fas fa-home mr-3"></i>  Ahmedabad , Gujarat </p>
+            <i class="fas fa-home mr-3"></i>  Jalgaon , Maharashtra </p>
           
         </div>
       </div>
@@ -131,7 +131,7 @@
         <div class="col-md-7 col-lg-8">
           <p class="text-center text-md-left">© 2020 Copyright:
             <a>
-              <strong>AADD</strong>
+              <strong>Purvansh Jain</strong>
             </a>
           </p>
         </div>
